--- a/app/views/feats/new.html.erb
+++ b/app/views/feats/new.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/single_loc_map_script' %>
+<%= render 'shared/map_script', {obj_list: @feats} %>
   <div class="background-unit">
     <div class="container">
 	  <div class="row-fluid">
