--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/multi_loc_map_script', {obj_list: @attempts} %>
+<%= render 'shared/map_script', {obj_list: @attempts} %>
 	 
   <div class="background-unit">
     <div class="container">
