--- a/app/views/feats/search.html.erb
+++ b/app/views/feats/search.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/multi_loc_map_script', {obj_list: @feats} %>
+<%= render 'shared/map_script', {obj_list: @feats} %>
 <div class="background-unit">
   <div class="container">
 		<div class="row-fluid">
