--- a/app/views/validations/index.html.erb
+++ b/app/views/validations/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/single_loc_map_script' %>
+<%= render 'shared/map_script', {obj_list: [@feat]} %>
 
 <div class="background-unit">
   <div class="container">
