--- a/app/views/layouts/_feat_info.html.erb
+++ b/app/views/layouts/_feat_info.html.erb
@@ -1,41 +1,32 @@
-<div class="row">
-	<h1><div class="span12" align="left">The Feat</div><h1>
-	<h2><div class="span12"><%= link_to "#{@feat.name}", feat_path(@feat.id) %></div></h2>
-</div>
+<h1>The Feat:</h1>
+<h1><%= link_to "#{@feat.name}", feat_path(@feat.id) %></h1>
+<h2><em>created by</em> <%= link_to "#{@feat.user.username}", user_path(@feat.user.id) %></h2>
+
 <br>
-<div class="row">
-	<h1><div class="span12"  align="left">Created By</div></h1>
-	<h2><div class="span12">
-		<%= link_to "#{@feat.user.username}", user_path(@feat.user.id) %>
-	</div></h2>
-</div>
+
+<h1>Feat Location:</h1>
+<h2><%= @location.name %><br><%= @location.address %></h2>
+
 <br>
-<div class="row">
-	<h1><div class="span12" align="left">Feat Location</div></h1>
-	<h2><div class="span12">
-		<%= @location.name %><br>
-		<%= @location.address %>
-	</div></h2>
-</div>
+
+<h1>Feat Description:</h1>
+<h2><%= @feat.description %></h2>
+
 <br>
-<div class="row">
-	<h1><div class="span12" align="left">Feat Description</div></h1>
-	<h2><div class="span12"><%= @feat.description %></div></h2>
-</div>
-<br>
-<div class="row">
-	<h1><div class="span12" align="left">Scoring</div></h1>
-	<div class="span12">
-		<% if @feat.low_score_wins %>	
-			<% if @feat.timed %>
-				Shortest time wins.
-			<% else %>
-				Low score wins.
-			<% end %>
-		<% elsif @feat.timed %>
-			Longest time wins.
-		<% else %>
-			High score wins.
-		<% end %>
-	</div>
-</div>
+
+<h1>Scoring:</h1>
+<h2>
+  <% if @feat.low_score_wins %>	
+    <% if @feat.timed %>
+      Shortest time wins
+    <% else %>
+      Low score wins
+    <% end %>
+  <% elsif @feat.timed %>
+    Longest time wins
+  <% else %>
+    High score wins
+  <% end %>
+</h2>
+
+
