--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -4,25 +4,15 @@
 	  <div class="row">
       <div class="span4">
 		  	<div class="craig-unit">
-		    	<%= render 'layouts/feat_info' %>
-					<br>
-					<%= render 'layouts/attempt_info' %>
-					<br>
-					<% if @attempt.user.id == session[:user_id] %>					
-						<div class="row">
-			  			<div class="span4">
-			  				<h2><%= link_to "Delete This Attempt",
-			 						attempt_path(@attempt.id),
-			  					confirm: 'Delete this attempt?', method: 'delete' %></h2>
-			  			</div>
-						</div>
-					<% elsif 
-						@attempt.validations.where(user_id: session[:user_id]).first.nil? %>
-						<div class="row">
-			  			<div class="span4" align="center">
-			    			<%= link_to "Validate this attempt", new_validation_path %>
-		      		</div>
-						</div>
+		      <%= render 'layouts/feat_info' %>
+					  <div class="hr1"></div>
+				    <%= render 'layouts/attempt_info' %>
+				    <br>
+				    <% if @attempt.user.id == session[:user_id] %>
+						<br>					
+            <h2><%= link_to "Delete This Attempt", attempt_path(@attempt.id), confirm: 'Delete this attempt?', method: 'delete' %></h2>
+				    <% elsif @attempt.validations.where(user_id: session[:user_id]).first.nil? %>
+  		      <%= link_to "Validate this attempt", new_validation_path %>
 					<% end %>
 		  	</div>
 			</div>
