--- a/app/views/feats/index.html.erb
+++ b/app/views/feats/index.html.erb
@@ -2,37 +2,33 @@
 
   <div class="background-unit">
     <div class="container">
-	  <div class="row">
+	    <div class="row-fluid">
         <div class="span12">
-		  <%= link_to(( image_tag @user.image ), @user ) %>
-		  <%= link_to "#{@user.username}", @user %> has 
-		  created the following feats:
-		</div>
-	  </div>
+		      <%= link_to(( image_tag @user.image ), @user ) %>
+		      <%= link_to "#{@user.username}", @user %> has created the following feats:
+		    </div>
+	    </div>
       <br>
 	  
-	  <div class="row">
+	    <div class="row-fluid">
         <div class="span4">
-		  <div class="craig-unit">
+		      <div class="craig-unit">
             <%= form_tag feats_path, action: 'show', method: 'get' do %>
             <fieldset>
-		    <%= select_tag("id",
-		    options_from_collection_for_select(@feats, :id, :name),
-		    onchange: "selection_changed(this)", multiple: 'true')%>
-		    <br>
-            <%= submit_tag 'View Feat', name: nil,
-		    class: "btn btn-small btn-primary" %>
+		        <%= select_tag("id", options_from_collection_for_select(@feats, :id, :name), onchange: "selection_changed(this)", multiple: 'true')%>
+		        <br>
+            <%= submit_tag 'View Feat', name: nil, class: "btn btn-small btn-primary" %>
             </fieldset>
             <% end %>
-		  </div>
-	    </div>
+		      </div>
+	      </div>
 
         <div class="span8">
-	      <div class="map-well"> 
-	        <div id="map_canvas"></div>
+	        <div class="map-well"> 
+	          <div id="map_canvas"></div>
           </div>
+	      </div>
 	    </div>
-	  </div>
     </div>
   </div>
 
