--- a/app/views/feats/new.html.erb
+++ b/app/views/feats/new.html.erb
@@ -1,54 +1,56 @@
 <%= render 'shared/single_loc_map_script' %>
-  <div class="background-unit">
-    <div class="container">
+<div class="background-unit">
+  <div class="container">
 	  <div class="row-fluid">
-        <div class="span4">
-		  <div class="craig-unit">
-            <h1>The Feat location is:</h1>
+      <div class="span4">
+		    <div class="craig-unit">
+          <h1>Feat Location:</h1>
 		       <h2>
-			   <%= @location.name %><br>
-		       <%= @location.address %><br>
+			       <%= @location.name %><br>
+		         <%= @location.address %><br>
 		       </h2>
-			   <h2><%= link_to "Change the Feat Location", locate_locations_path %></h2>
-               <div class="hr1"></div>
-			   <h1>Name the Feat and describe it.</h1>
-			   <br>
-               <%= form_for @feat do |f| %>
-               <%= render 'shared/error_messages', target: @feat %>
-			   <fieldset>
+			     <h2><%= link_to "Change the Feat Location", locate_locations_path %></h2>
+           <div class="hr1"></div>
+			     <h1>Name the feat and describe it.</h1>
+			     <br>
+           <%= form_for @feat do |f| %>
+           <%= render 'shared/error_messages', target: @feat %>
+			       <fieldset>
                <%= f.label "Feat name" %>
                <%= f.text_field :name, class: "field span12" %>
+							 <br>
+							 <br>
                <%= f.label "Feat description" %>
                <%= f.text_area :description, rows: 4, class: "field span12" %>
-				 <%= f.label "Is the Feat timed or scored?"%>
-			   <%= f.radio_button :timed, 1 %>
-			   <%= f.label :timed, style: "display:inline;" %>
-			   <br>
-			   <%= f.radio_button :timed, 0, checked: true %>
-			   <%= f.label :timed, "Scored", style: "display:inline;" %>
-			   <br>
-			   <br>
-				 <%= f.label "How is the winner determined?"%>
-				<%= f.radio_button :low_score_wins, 1 %>
-				<%= f.label "Low score/time wins", style: "display:inline;" %>
-				<br>
-				<%= f.radio_button :low_score_wins, 0, checked: true %>
-			  <%= f.label "High score/time wins", style: "display:inline;" %>
-	           
+							 <br>
+							 <br>
+				       <%= f.label "Is the Feat timed or scored?"%>
+			         <%= f.radio_button :timed, 1 %>
+			         <%= f.label :timed, style: "display:inline;" %>
+			         <br>
+			         <%= f.radio_button :timed, 0, checked: true %>
+			         <%= f.label :timed, "Scored", style: "display:inline;" %>
+			         <br>
+			         <br>
+				       <%= f.label "How is the winner determined?"%>
+				       <%= f.radio_button :low_score_wins, 1 %>
+				       <%= f.label "Low score/time wins", style: "display:inline;" %>
+				       <br>
+				       <%= f.radio_button :low_score_wins, 0, checked: true %>
+			         <%= f.label "High score/time wins", style: "display:inline;" %>
                <br>
                <br>
-	           <%= f.submit "Create Feat", 
-	           class: "btn btn-small btn-primary" %>
-			   </fieldset>
-               <% end %>
-           </div>
+	             <%= f.submit "Create Feat", class: "btn btn-small btn-primary" %>
+			       </fieldset>
+           <% end %>
          </div>
+       </div>
 		 
-         <div class="span8">
+       <div class="span8">
 	       <div class="map-well"> 
 	         <div id="map_canvas"></div>
-           </div>
+         </div>
 	     </div>
 	   </div>
-     </div>
    </div>
+</div>
