--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,18 +18,18 @@
       	</div>
       	<div class="span4">
         	<h1><em>Help Us Build A Better Website</em></h1>
-        	<a href="mailto:bugreport@featswithfriends.com"><h2>Report A
-	 					Bug</h2></a>
-					<a href="mailto:feedback@featswithfriends.com"><h2>feedback@featswithfriends.com</h2></a>	
+        	<a href="mailto:bugreport@featswithfriends.com"><h2><font color="#ccc">Report A
+	 					Bug</font></h2></a>
+					<a href="mailto:feedback@featswithfriends.com"><h2><font color="#ccc">feedback@featswithfriends.com</font></h2></a>	
       	</div>
       	<div class="span3">
         	<h1><em>Connecting With Us</em></h1>
         	<a href="http://www.twitter.com/featsof"
-onclick="window.open('https://twitter.com/FeatsOf','popup','width=870,height=900,scrollbars=yes,resizable=yes'); return false"/><h2>@featsof</h2></a>
+onclick="window.open('https://twitter.com/FeatsOf','popup','width=870,height=900,scrollbars=yes,resizable=yes'); return false"/><h2><font color="#ccc">@featsof</font></h2></a>
         	<a href="http://www.facebook.com/featswithfriends" 			
 						onclick="window.open('https://facebook.com/featswithfriends',
 						'popup','width=870,height=900,scrollbars=yes,resizable=yes'); 
-						return false"/><h2>facebook</h2></a>
+						return false"/><h2><font color="#ccc">facebook</font></h2></a>
       	</div>
 	 			<div class="span2">
 					<h3><br>©2012 IgnitionPad, LLC. All Rights Reserved</h3>
