--- a/app/views/locations/choose_from_existing.html.erb
+++ b/app/views/locations/choose_from_existing.html.erb
@@ -1,26 +1,4 @@
-<script type="text/javascript"
-	src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBk3LMS2I-w-KWmm2YEnPdqPu4EVULGfdE&sensor=false">
-</script>
-<script type="text/javascript">
-	var gMap;
-	$(function () {
-		var lat_lng = new google.maps.LatLng(<%=session[:latitude]%>,
-			 							<%=session[:longitude]%>);
-	  var mapOptions = {
-	    center: lat_lng,
-	    zoom: 15,
-	    mapTypeId: google.maps.MapTypeId.ROADMAP
-	  };
-	  gMap = new google.maps.Map(document.getElementById("map_canvas"),
-	          mapOptions);
-		var marker = new google.maps.Marker({
-			position: lat_lng,
-			title: "<%=session[:address]%>"
-		});
-	
-		marker.setMap(gMap);
-	});
-</script>
+<%= render 'shared/map_script', { obj_list: @feats } %>
 
 <div class="background-unit">
 	<div class="container">
@@ -32,16 +10,9 @@
 					<%= "#{session[:address]}" %>:
 					<br>
           <br>
-          <%= form_tag new_feat_path, method: 'get' do %>
-           	<fieldset>
-							<%= select_tag(:location_id,
-								options_from_collection_for_select(@locations, :id, :name),
-   							multiple: 'true')%>
-							<br>
-           		<%= submit_tag 'Use This Location', name: nil,
-								class: "btn btn-small btn-primary" %>
-         		</fieldset>
-          <% end %>
+					<% @locations.each do |l| %>
+						<h2><%= link_to l.name, select_location_path( l.id ) %></h2>
+					<% end %>
 					<h1>or</h1>
 					<h2><%= link_to 'Create A New Location', new_location_path %></h2>
 		  </div>
