--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -1,41 +1,27 @@
 <%= render 'shared/map_script', {obj_list: @attempts} %>
-	 
-  <div class="background-unit">
-    <div class="container">
+<div class="background-unit">
+  <div class="container">
 	  <div class="row-fluid">
-        <div class="span12">
-		  <%= link_to(( image_tag @user.image ), @user ) %>
-		  <%= link_to "#{@user.username}", @user %> has 
-		  attempted the following feats:
+      <div class="span12">
+		  	<%= link_to(( image_tag @user.image ), @user ) %>
+		  	<%= link_to "#{@user.username}", @user %> has attempted the following
+		 			feats:
 	    </div>
 	  </div>
 	  <br>
-	  
 	  <div class="row-fluid">
-        <div class="span4">
-		  <div class="craig-unit">
-	        <%= form_tag feats_path, action: 'show', method: 'get' do %>
-	        <fieldset>
-			<select id="id" name="id" onchange="selection_changed(this)" 
-			multiple="multiple">
-			<% @attempts.each do |a| %>
-			<option value="<%=a.feat.id%>"><%=a.feat.name%></option>
-			<% end %>
-			</select>
-			<br>
-	        <%= submit_tag 'View Feat', 
-			class: "btn btn-small btn-primary" %>
-	        </fieldset>
-	        <% end %>
+      <div class="span4">
+		  	<div class="craig-unit">
+					<% @attempts.each do |a| %>
+						<h2><%= link_to a.feat.name, feat_path( a.feat.id ) %></h2>
+					<% end %>
 	      </div>
-		</div>
-	 
-	 	
+			</div>
 	    <div class="span8">
 	      <div class="map-well"> 
 	        <div id="map_canvas"></div>
-          </div>
+        </div>
 	    </div>
 	  </div>
-    </div>
   </div>
+</div>
