--- a/app/views/attempts/edit.html.erb
+++ b/app/views/attempts/edit.html.erb
@@ -6,7 +6,10 @@
       <div class="span4">
   			<div class="craig-unit">
     			<%= render 'layouts/feat_info' %>
-   				<div class="hr1"></div>
+			  </div>
+   			<div class="craig-unit">
+				  <h2><strong>Update your attempt.</strong></h2>
+					<div class="hr1"></div>
 					<%= render 'attempt_form' %>
   			</div>
 			</div>				
