--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -5,9 +5,10 @@
       <div class="span4">
 		  	<div class="craig-unit">
 		    	<%= render 'layouts/feat_info' %>
+			  </div>
+				<div class="craig-unit">
+          <h2><strong>Record your feat attempt.</strong></h2>
 					<div class="hr1"></div>
-          <h1>Record your Feat attempt.</h1>
-					<br>
     			<%= render 'attempt_form' %>
   			</div>
 			</div>				
