--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -4,8 +4,7 @@
 	  <div class="row-fluid">
       <div class="span4">
 		    <div class="craig-unit">
-          <h1>Name the feat location.</h1>
-          <br>
+          <h2><strong>Name the feat location.</strong></h2>
           <%= form_for @location do |f| %>
           <%= render 'shared/error_messages', target: @location %>
             <fieldset>
