--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,8 +12,7 @@
   margin-top: 30px;
   margin-left: 10px;
   margin-right: 10px;
-  background-image: url(greyline.png);
-  background-repeat: repeat;
+  background-color: #fff;
   border-bottom: 1px solid #E6E6E6;
   border-top: 1px solid #CCC;
   border-left: 1px solid #CCC;
@@ -261,7 +260,7 @@
 
 .craig-unit {
   min-height: 20px;
-  padding: 3px 15px 4px 15px;
+  padding: 5px 16px 7px 16px;
   margin-bottom: 20px;
   background: #FFF;
   border: 1px solid #CCC;
@@ -274,19 +273,18 @@
 }
 
 .craig-unit h1 {
-  margin-bottom: 0;
-  font-size: 16px;
-  line-height: 1.3;
+  font-size: 12px;
+	line-height: 1.9;
   letter-spacing: 0px;
-  font-weight: 400;
-  color: #000;
+  font-weight: 300;
+  color: #333;
 }
 
 .craig-unit h2 {
   font-size: 14px;
   line-height: 1.3;
   letter-spacing: 0px;
-  font-weight: 400;
+  font-weight: 300;
   color: #333;
 }
 
@@ -366,18 +364,17 @@
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
 }
 
-
 .hr1 {
-  margin: 20px 0px 20px 0px;
+  margin: 14px -15px 14px -15px;
   border: 0;
-  border-bottom: 1px dashed #999;
-  width: 100%;
+  border-top: 1px solid #eeeeee;
+  border-bottom: 1px solid #ffffff;
+	width: 109%;
 }
-
 
 .btn-small {
   margin-top: 3px;
-  margin-bottom: -7px;
+  margin-bottom: -8px;
   padding: 7px 12px 9px 12px;
   font-size: 15px;
   line-height: 1;
@@ -449,17 +446,23 @@ alert {
   background-color: #fcf8e3;
   border: 1px solid #fbeed5;
   -webkit-border-radius: 0px;
-     -moz-border-radius: 0px;
-          border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
 
 .alert-notice {
   margin-bottom: 0px;
+	-webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
   
 .alert-heading {
   color: inherit;
   margin-bottom: 0px;
+	-webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
 
 .alert .close {
@@ -467,6 +470,9 @@ alert {
   top: -2px;
   right: -21px;
   line-height: 1;
+	-webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
 
 .alert-success {
@@ -474,6 +480,9 @@ alert {
   background-color: #dff0d8;
   border-color: #d6e9c6;
   margin-bottom: 0px;
+	-webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
 
 .alert-danger,
@@ -482,6 +491,9 @@ alert {
   background-color: #f2dede;
   border-color: #eed3d7;
   margin-bottom: 0px;
+	-webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
 
 .alert-info {
@@ -489,12 +501,18 @@ alert {
   background-color: #d9edf7;
   border-color: #bce8f1;
   margin-bottom: 0px;
+	-webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
 
 .alert-block {
   padding-top: 14px;
   padding-bottom: 0px;
   margin-bottom: 0px;
+	-webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
 
 .alert-block > p,
