--- a/app/views/layouts/_feat_info.html.erb
+++ b/app/views/layouts/_feat_info.html.erb
@@ -1,21 +1,19 @@
-<h1>The Feat:</h1>
-<h1><%= link_to "#{@feat.name}", feat_path(@feat.id) %></h1>
-<h2><em>created by</em> <%= link_to "#{@feat.user.username}", user_path(@feat.user.id) %></h2>
+<h2><strong><%= link_to "#{@feat.name}", feat_path(@feat.id) %></strong>
+created by <%= link_to "#{@feat.user.username}", user_path(@feat.user.id) %></h2>
+<div class="hr1"></div>
 
+<h2><strong>Location:</strong><br>
+
+<%= @location.name %><br><%= @location.address %><br>
 <br>
 
-<h1>Feat Location:</h1>
-<h2><%= @location.name %><br><%= @location.address %></h2>
+<strong>Description:</strong><br>
 
+<%= @feat.description %><br>
 <br>
 
-<h1>Feat Description:</h1>
-<h2><%= @feat.description %></h2>
+<strong>Scoring:</strong><br>
 
-<br>
-
-<h1>Scoring:</h1>
-<h2>
   <% if @feat.low_score_wins %>	
     <% if @feat.timed %>
       Shortest time wins
