--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -27,7 +27,7 @@
 								</li>
 			          <li class="divider"></li>
 			          <li>
-									<%= link_to "Sign out", signout_path, method: "delete" %>
+									<%= link_to "Sign Out", signout_path, method: "delete" %>
 								</li>
 		          </ul>
 		        </li>  
