--- a/app/views/feats/show.html.erb
+++ b/app/views/feats/show.html.erb
@@ -1,48 +1,52 @@
 <%= render 'shared/map_script', {obj_list: [@feat]} %>
 <div class="background-unit">
   <div class="container">
-	  <div class="row">
+	  <div class="row-fluid">
       <div class="span4">
 		    <div class="craig-unit">
 		      <%= render 'layouts/feat_info' %>
 				</div>
 				<div class="craig-unit">
 	        <% if @attempts.empty? %>
-		      <h2><strong>This feat doesn't have an attempt yet.<br> Would you like to record one?</strong></h2>
+						<div class="row-fluid">
+							<div class="span12">
+		      			<h2><strong>This feat doesn't have an attempt yet.<br> Would you like to record one?</strong></h2>
+							</div>
+						</div>
 		      <% else %>
-	        <h2><strong>Feat attempts:</strong></h2>
-					  <div class="hr1"></div>
-				    
-	            <ol>
-							  <div class="row-fluid">
-	                <% @attempts.each do |a| %>
-								    <div class="span7">
-										  <h2>
-	                    <% if @feat.timed %>
-	                    	<li><%= link_to "#{ a.user.username}", 
-													user_path( a.user.id)%> - <%= a.score.to_hhmmss %>
-	                    <% else %>
-	                    	<li><%= link_to "#{a.user.username}", 
-													user_path(a.user.id)%> - <%= a.score.to_s %>
-	                  	<% end %>
+						<div class="row-fluid">
+							<div class="span12">
+	        			<h2><strong>Feat attempts:</strong></h2>
+					  		<div class="hr1"></div>
+							</div>
+						</div>
+	          <ol>
+							<% @attempts.each do |a| %>
+								<div class="row-fluid">
+									<div class="span7">
+								  	<li>
+									  	<h2>
+                  			<% if @feat.timed %>
+	                    		<%= link_to "#{ a.user.username}", user_path( a.user.id)%> - <%= a.score.to_hhmmss %>
+	                  		<% else %>
+	                    		<%= link_to "#{a.user.username}", user_path(a.user.id)%> - <%= a.score.to_s %>
+	                  		<% end %>
 											</h2>
-								  	</div>
-								  	<div class="span5">
-										  <h1>
-	                    <% if a.user.id == session[:user_id] %>
-	                    	<% @attempt_exists = true %>
-	                    	<%= link_to "Update", edit_attempt_path(a.id) %> |
-	                    	<%= link_to "Delete", attempt_path(a.id), 
-													confirm: 'Delete this attempt?', method: 'delete' %> |
-												<%= link_to "View", attempt_path(a.id) %>
-	                  	<% end %>
-	                    </li>
-											</h1>
-									  </div>
-	                <% end %>
+	                	</li>
+									</div>
+									<div class="span5">
+								  	<h1>
+											<%= link_to "View", attempt_path(a.id) %>
+	                  	<% if a.user.id == session[:user_id] %>
+	               				<% @attempt_exists = true %>
+	                 			| <%= link_to "Update", edit_attempt_path(a.id) %> |
+	                 			<%= link_to "Delete", attempt_path(a.id), confirm: 'Delete this attempt?', method: 'delete' %>
+	                 		<% end %>
+										</h1>
+									</div>
 								</div>
-	            </ol>
-				    
+	            <% end %>
+	        	</ol>
 		      <% end %>
 		      <% unless @attempt_exists %>
 			      <h2><%= link_to "Record Attempt", new_attempt_path %></h2>
