--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -117,7 +117,7 @@
 
 
 .background-unit {
-  min-height: 700px;
+  min-height: 650px;
   padding: 40px;
   margin-left: -20px;
   margin-right: -20px;
@@ -126,6 +126,14 @@
       -moz-box-shadow: inset 0 10px 10px -10px #999;
   -webkit-box-shadow: inset 0 10px 10px -10px #999;
   box-shadow: inset 0 10px 10px -10px #999;
+}
+
+.background-unit h1 {
+  font-size: 50px;
+	line-height: 1;
+  letter-spacing: 0px;
+  font-weight: 200;
+  color: #333;
 }
 
 .pull-right {
@@ -319,30 +327,22 @@
 
 .home-well {
   min-height: 20px;
-  min-width: 20px;
-  padding: 10px 18px 10px 18px;
+  max-width: 480px;
+  padding: 18px 10px 10px 10px;
   background-color: #333;
+	border: 1px solid #ffffff;
   margin-bottom: 0px;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+   -webkit-box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.07);
+  -moz-box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.07);
+  box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.07);
 }
 
 .home-well h1 {
-  margin-bottom: 0;
-  font-size: 33px;
-  line-height: 1.1;
-  font-weight: 200;
-  letter-spacing: 0px;
-  color: #FFF;
-}
-
-.home-well h2 {
-  font-size: 28px;
-  line-height: 1.1;
+  font-size: 24px;
+  line-height: 1.2;
   font-weight:100;
   color: #FFF;
   letter-spacing: 1px;
