--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,31 +1,32 @@
-<div class="row">
-  <div class="span9">
-  <br>
-  <br>
-  <br>
-  <br>
-    <div class="well">
-    <h2>Create and set records all over the world</h2>
-    <br>
-    <h2>Compete with friends and foes in incredible feats of _____</h2>
-   </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <ul class="span3">
-      <div class="well">
-	      <h3>Sign up and start competing!</h3>
-        <br>
-        <%= form_for(@user) do |f| %>
-          <%= render 'shared/error_messages', target: @user %>
-          <h3><%= f.label :email %></h3>
-          <%= f.text_field :email %>
-          <br>
-          <%= f.submit "Sign Up", class: "btn btn-large btn-primary" %>
-        <% end %>
-      </div>
-    </ul>
-  </div>
+<div class="background-unit">
+	<div class="container">
+		<div class="row">
+	  	<div class="span9">
+	  		<br>
+	  		<br>
+	  		<br>
+	  		<br>
+	    	<div class="home-unit">
+	    		<h1>Create and set records all over the world</h1>
+	    		<br>
+	    		<h1>Compete with friends and foes in incredible feats of _____</h1>
+	   		</div>
+	  	</div>
+		</div>
+	  <div class="row">
+	    <ul class="span3">
+	      <div class="home-unit">
+		      <h1>Sign up and start competing!</h1>
+	        <br>
+	        <%= form_for(@user) do |f| %>
+	          <%= render 'shared/error_messages', target: @user %>
+	          <h3><%= f.label :email %></h3>
+	          <%= f.text_field :email %>
+	          <br>
+	          <%= f.submit "Sign Up", class: "btn btn-large btn-primary" %>
+	        <% end %>
+	      </div>
+	    </ul>
+	  </div>
+	</div>
 </div>
