small mod to signup page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
 	  		<br>
 	  		<br>
 	  		<br>
-	    	<div class="home-unit">
+	    	<div class="home-well">
 	    		<h1>Create and set records all over the world</h1>
 	    		<br>
 	    		<h1>Compete with friends and foes in incredible feats of _____</h1>
@@ -15,7 +15,7 @@
 		</div>
 	  <div class="row">
 	    <ul class="span3">
-	      <div class="home-unit">
+	      <div class="home-well">
 		      <h1>Sign up and start competing!</h1>
 	        <br>
 	        <%= form_for(@user) do |f| %>
