--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -12,8 +12,19 @@
 	  <div class="row-fluid">
       <div class="span4">
 		  	<div class="craig-unit">
-					<% @attempts.each do |a| %>
-						<h2><%= link_to a.feat.name, feat_path( a.feat.id ) %></h2>
+					<% unless @attempts.empty? %>
+						<% @attempts.each do |a| %>
+							<h2><%= link_to a.feat.name, feat_path( a.feat.id ) %></h2>
+						<% end %>
+					<% else %>
+						<% if @user.id  == session[ :user_id ] %>
+							<h2>You have no feat attempts. 
+								<%= link_to "Search for feats", search_feats_path %> to
+									attempt?</h2>
+						<% else %>
+							<h2><%= link_to "#{@user.username}", @user %> has not attempted
+								any feats.</h2>
+						<% end %>
 					<% end %>
 	      </div>
 			</div>
