--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,17 +4,19 @@
 	    <div class="span12">
         <div class="craig-unit">
 		      <%= image_tag@user.image %> <%= @user.name %>
+					<br>
+					<br>
 	        <%= form_for(@user) do |f| %>
 	        <%= render 'shared/error_messages', target: @user %>
 	          <fieldset>
-						<br>
 	            <div class="control-group">
 	              <%= f.label :username %>
 	                <div class="controls">
 	                  <%= f.text_field :username %>
 	                </div>
 	            </div> 
-	              <%= f.submit "Save Changes", class: "btn btn-small btn-primary" %>
+	              <%= f.submit "Save Changes", 
+									class: "btn btn-small btn-primary" %>
 	           </fieldset>
 	        <% end %>
 			  </div>
