--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,15 @@
 	    <div class="nav-collapse pull-right">
 	      <ul class="nav">
 		      <% if current_user %>
-						<li><%= link_to "Search Feats", search_feats_path %></li>
+						<li id="search-menu" class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+								Search <b class="caret"></b>
+							</a>
+							<ul class="dropdown-menu">
+								<li><%= link_to "Search Feats", search_feats_path %></li>
+								<li><%= link_to "Search Users", search_users_path %></li>
+							</ul>
+						</li>
 		        <li><%= link_to "Create A Feat", new_feat_path %></li>
 		        <li id="user-menu" class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
