--- a/app/views/layouts/_attempt_info.html.erb
+++ b/app/views/layouts/_attempt_info.html.erb
@@ -1,9 +1,9 @@
 <% if @feat.timed %>
-  <h2><strong><%= link_to "#{@attempt.user.username.possessive}", user_path(@attempt.user.id) %> time:</strong></h1>
+  <h2><strong><%= link_to "#{@attempt.user.username.possessive}", user_path(@attempt.user.id) %> Time</strong></h1>
   <center><div class="hr1"></div></center>
 	<%= @attempt.score.to_hhmmss %>
   <% else %>
-    <h2><strong><%= link_to "#{@attempt.user.username.possessive}", user_path(@attempt.user.id) %> score:</strong></h2>
+    <h2><strong><%= link_to "#{@attempt.user.username.possessive}", user_path(@attempt.user.id) %> Score</strong></h2>
 		<center><div class="hr1"></div></center>
     <h2><%= @attempt.score.to_s %></h2>
 <% end %>
