--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -7,7 +7,7 @@
 		    	<%= render 'layouts/feat_info' %>
 			  </div>
 				<div class="craig-unit">
-          <h2><strong>Record your feat attempt.</strong></h2>
+          <h2><strong>Record your attempt.</strong></h2>
 					<div class="hr1"></div>
     			<%= render 'attempt_form' %>
   			</div>
