--- a/app/views/validations/show.html.erb
+++ b/app/views/validations/show.html.erb
@@ -6,6 +6,8 @@
       <div class="span4">
 	    	<div class="craig-unit">
 		  		<%= render 'layouts/feat_info' %>
+				</div>
+				<div class="craig-unit">
 		  		<%= render 'layouts/attempt_info' %>
 					<%= render 'layouts/validation_info' %>
 				</div>
