--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -372,6 +372,14 @@
 	width: 100%;
 }
 
+.hr2 {
+  margin: 15px 0px 14px 0px;
+  border: 0;
+  border-top: 1px dotted #eeeeee;
+  border-bottom: 1px dotted #ffffff;
+	width: 100%;
+}
+
 .btn-small {
   margin-top: 3px;
   margin-bottom: -8px;
@@ -384,7 +392,7 @@
 }
 
 .btn-large {
-  padding: 12px 35px;
+  padding: 13px 30px;
   margin-top: 10px;
   font-size: 18px;
   font-weight: 200;
