--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -4,7 +4,7 @@
   <%= javascript_include_tag "application" %>
 	<%= content_for :page_specific_js %>
   <%= csrf_meta_tags %>
-
+ <meta name="google-site-verification" content="wLYGEE_ExR7TGaJYXtoX5DNudoiyJ2HtEytvDDFEwc4" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
