--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -367,16 +367,16 @@
 .hr1 {
   margin: 14px 0px 14px 0px;
   border: 0;
-  border-top: 1px solid #eeeeee;
+  border: 1px solid #ededed;
   border-bottom: 1px solid #ffffff;
 	width: 100%;
 }
 
 .hr2 {
-  margin: 15px 0px 14px 0px;
+  margin: 16px 0px 14px 0px;
   border: 0;
-  border-top: 1px dotted #eeeeee;
-  border-bottom: 1px dotted #ffffff;
+  border: 1px dashed #D7D7D7;
+  border-bottom: 1px dashed #ffffff;
 	width: 100%;
 }
 
