--- a/app/views/layouts/_attempt_info.html.erb
+++ b/app/views/layouts/_attempt_info.html.erb
@@ -1,7 +1,7 @@
 <% if @feat.timed %>
   <h2><strong><%= link_to "#{@attempt.user.username.possessive}", user_path(@attempt.user.id) %> Time</strong></h1>
   <center><div class="hr1"></div></center>
-	<%= @attempt.score.to_hhmmss %>
+	<h2><%= @attempt.score.to_hhmmss %></h2>
   <% else %>
     <h2><strong><%= link_to "#{@attempt.user.username.possessive}", user_path(@attempt.user.id) %> Score</strong></h2>
 		<center><div class="hr1"></div></center>
@@ -19,7 +19,5 @@
   <% end %>	
 <% end %>
 <% unless @attempt.image.blank? %>
-<br>
-<br>
   <%= image_tag @attempt.image_url.to_s %>
 <% end %>
