--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,20 +9,20 @@
 	        <h2><strong>Username:</strong> <%= @user.username %></h2>
 		      <h2>
 					  <% if @feat_count == 0 %>
-			      0 feats created,
+			      0 Feats Created
 			      <% elsif @feat_count == 1 %>
-	    	    <%= link_to "#{@feat_count} feat created", feats_path( user_id: params[:id] ) %>
+	    	    <%= link_to "#{@feat_count} Feat Created", feats_path( user_id: params[:id] ) %>
 			      <% else %>
-			      <%= link_to "#{@feat_count} feats created", feats_path( user_id: params[:id] ) %>
+			      <%= link_to "#{@feat_count} Feats Created", feats_path( user_id: params[:id] ) %>
 			    <% end %>
 			    <br>
 			    <% if @attempt_count == 0 %>
-			      0 feats attempted,
+			      0 Feats Attempted
 			      <% elsif @attempt_count == 1 %>
-			      <%= link_to "#{@attempt_count} feat attempted",
+			      <%= link_to "#{@attempt_count} Feat Attempted",
 			      attempts_path( user_id: params[:id] ) %>
 			      <% else %>
-			      <%= link_to "#{@attempt_count} feats attempted",
+			      <%= link_to "#{@attempt_count} Feats Attempted",
 			      attempts_path( user_id: params[:id] ) %>
 			    <% end %>
 					</h2>
