--- a/app/views/layouts/_attempt_info.html.erb
+++ b/app/views/layouts/_attempt_info.html.erb
@@ -10,12 +10,10 @@
 <% unless params[:controller] == "validations" %>
   <% if @validations.empty? %>
 	  <h2>0 Validations</h2>
-    <h2>
 		  <% elsif @validations.size == 1 %>
-	    <%= link_to "1 validation", validations_path %>
+	    <h2><%= link_to "1 validation", validations_path %></h2>
 	    <% else %>
-	    <%= link_to "#{@validations.size} validations", validations_path %>
-		</h2>
+	    <h2><%= link_to "#{@validations.size} validations", validations_path %></h2>
   <% end %>	
 <% end %>
 <% unless @attempt.image.blank? %>
