--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -10,12 +10,9 @@
 				  <%= render 'layouts/attempt_info' %>
 				  <br>
 				  <% if @attempt.user.id == session[:user_id] %>
-				
-            <h2><%= link_to "Delete Attempt", attempt_path( @attempt ),
- 							confirm: 'Delete this attempt?', method: 'delete' %></h2>
-				  <% elsif @attempt.validations.where( 
-							user_id: session[:user_id]).first.nil? %>
-  		      <%= link_to "Validate this attempt", new_validation_path %>
+            <h2><%= link_to "Delete Attempt", attempt_path( @attempt ), confirm: 'Delete this attempt?', method: 'delete' %></h2>
+				  <% elsif @attempt.validations.where(user_id: session[:user_id]).first.nil? %>
+  		      <h2><%= link_to "Validate this attempt", new_validation_path %></h2>
 					<% end %>
 		  	</div>
 			</div>
