--- a/app/views/attempts/_attempt_form.html.erb
+++ b/app/views/attempts/_attempt_form.html.erb
@@ -29,6 +29,7 @@
 		<%= f.file_field :image, accept: "image/*" %>
 		<br>
 		<br>
+		<%= f.label "Video URL"%>
 		<%= f.submit "Record Attempt", 
         class: "btn btn-small btn-primary" %>		            
 	</fieldset>
